--- a/index.html
+++ b/index.html
@@ -1,40 +1,235 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Carrito de Compras</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Carrito FitZone</title>
   <style>
-    body { font-family: sans-serif; padding: 2rem; background: #f4f4f4; }
-    .producto { background: white; padding: 1rem; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); max-width: 500px; margin: auto; }
-    img { max-width: 100%; border-radius: 5px; }
-    h2 { margin-top: 0.5rem; color: #8B0000; }
-    .descripcion { font-size: 0.9rem; color: #333; }
+    :root {
+      --bg: #111;
+      --fg: #eee;
+      --accent: #800000;
+      --card-bg: #222;
+      --toast-bg: rgba(0,0,0,0.8);
+    }
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: var(--bg);
+      color: var(--fg);
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    header {
+      background: var(--accent);
+      padding: 1rem;
+      text-align: center;
+      font-size: 1.8rem;
+      font-weight: bold;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.5);
+    }
+    .container {
+      display: flex;
+      flex: 1;
+      padding: 1rem;
+      gap: 1rem;
+      flex-wrap: wrap;
+    }
+    .cart {
+      flex: 2;
+      background: var(--card-bg);
+      border-radius: 8px;
+      padding: 1rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.5);
+    }
+    .summary {
+      flex: 1;
+      background: var(--card-bg);
+      border-radius: 8px;
+      padding: 1rem;
+      max-width: 350px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.5);
+      height: fit-content;
+    }
+    .cart h2, .summary h2 { margin-top: 0; }
+    .cart-item {
+      display: flex;
+      gap: 1rem;
+      margin-bottom: 1rem;
+      align-items: center;
+      background: #333;
+      border-radius: 6px;
+      padding: 0.75rem;
+    }
+    .cart-item img {
+      width: 80px; height: 80px;
+      cursor: pointer;
+      border-radius: 4px;
+      object-fit: cover;
+    }
+    .cart-item-details { flex: 1; }
+    .cart-item-details strong { display: block; font-size: 1.1rem; }
+    .cart-item-details small { color: #ccc; }
+    .cart-item-controls {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      gap: 0.5rem;
+    }
+    .cart-item-controls input {
+      width: 60px;
+      padding: 0.25rem;
+      border-radius: 4px;
+      border: none;
+      text-align: center;
+    }
+    button, select, input, textarea {
+      font: inherit;
+    }
+    .btn {
+      padding: 0.6rem 1rem;
+      background: var(--accent);
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .btn:hover { background: #a00000; }
+    .btn-danger { background: #f44336; }
+    .modal {
+      display: none;
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.85);
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+    .modal img {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 6px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.7);
+    }
+    .toast-container {
+      position: fixed;
+      bottom: 1rem; right: 1rem;
+      display: flex; flex-direction: column; gap: 0.5rem;
+      z-index: 1001;
+    }
+    .toast {
+      background: var(--toast-bg);
+      padding: 0.75rem 1rem;
+      border-radius: 4px;
+      color: #fff;
+      animation: fadein 0.3s, fadeout 0.3s 2.7s;
+    }
+    @keyframes fadein { from {opacity:0; transform: translateY(10px);} to {opacity:1; transform: translateY(0);} }
+    @keyframes fadeout { from {opacity:1;} to {opacity:0;} }
+    .summary label { display: block; margin-top: 0.75rem; font-weight: bold; }
+    .summary input, .summary select, .summary textarea {
+      width: 100%; margin-top: 0.25rem; padding: 0.5rem;
+      border-radius: 4px; border: 1px solid #444; background: #111; color: #eee;
+    }
   </style>
 </head>
 <body>
-  <div class="producto" id="productoContainer">
-    <p>Cargando producto...</p>
+  <header>Carrito FitZone</header>
+  <div class="container">
+    <section class="cart">
+      <h2>Tu Carrito</h2>
+      <div id="cart-items"></div>
+    </section>
+    <aside class="summary">
+      <h2>Resumen</h2>
+      <p>Subtotal: <span id="subtotal">$0.00</span></p>
+      <p>Descuento: <span id="discount">$0.00</span></p>
+      <p><strong>Total: <span id="total">$0.00</span></strong></p>
+      <label for="coupon">Código Promocional</label>
+      <input id="coupon" placeholder="Ej: FIT10">
+      <button class="btn" id="apply-coupon">Aplicar</button>
+      <label for="payment">Método de Pago</label>
+      <select id="payment">
+        <optgroup label="Efectivo">
+          <option value="Efectivo USD">Efectivo USD</option>
+          <option value="Efectivo CUP">Efectivo CUP</option>
+        </optgroup>
+        <optgroup label="Transferencia">
+          <option value="Transferencia MLC">Transferencia MLC</option>
+          <option value="Transferencia CUP">Transferencia CUP</option>
+        </optgroup>
+        <optgroup label="Exterior">
+          <option value="Zelle">Zelle</option>
+        </optgroup>
+      </select>
+      <label for="note">Nota al vendedor</label>
+      <textarea id="note" rows="3" placeholder="Instrucciones adicionales"></textarea>
+      <button class="btn" id="checkout">Enviar por WhatsApp</button>
+    </aside>
   </div>
-
+  <div class="modal" id="modal"><img src="" alt="Preview"></div>
+  <div class="toast-container" id="toasts"></div>
   <script>
-    const params = new URLSearchParams(window.location.search);
-    const nombre = params.get("producto");
-    const precio = params.get("precio");
-    const imagen = params.get("imagen");
-    const descripcion = params.get("descripcion");
-
-    if (nombre && precio && imagen) {
-      document.getElementById("productoContainer").innerHTML = `
-        <img src="${imagen}" alt="${nombre}" />
-        <h2>${nombre}</h2>
-        <p><strong>Precio:</strong> $${precio}</p>
-        <p class="descripcion">${descripcion || ""}</p>
-        <p style="color: green;">Producto añadido al carrito</p>
-      `;
-    } else {
-      document.getElementById("productoContainer").innerHTML = "<p>No se encontró el producto.</p>";
+    let cart = JSON.parse(localStorage.getItem('fz-cart')||'[]'), coupon=null;
+    const coupons={ 'FIT10':{type:'percent',amount:10}, 'FIT5':{type:'fixed',amount:5} };
+    function showToast(msg){const t=document.createElement('div');t.className='toast';t.textContent=msg;document.getElementById('toasts').append(t);setTimeout(()=>t.remove(),3000);}
+    function save(){localStorage.setItem('fz-cart',JSON.stringify(cart));}
+    function render(){
+      const c=document.getElementById('cart-items');c.innerHTML='';
+      cart.forEach((i,idx)=>{
+        const item=document.createElement('div');item.className='cart-item';
+        item.innerHTML=
+          `<img src="${i.image}" data-idx="${idx}">`+
+          `<div class="cart-item-details"><strong>${i.name}</strong><br><small>${i.description}</small><br>$${i.price.toFixed(2)}</div>`+
+          `<div class="cart-item-controls"><input type="number" min="1" value="${i.qty}" data-idx="${idx}"><button class="btn btn-danger" data-rem="${idx}">Eliminar</button></div>`;
+        c.append(item);
+      });
+      bindEvents(); updateSummary();
     }
+    function bindEvents(){
+      document.querySelectorAll('[data-rem]').forEach(b=>b.onclick=()=>{
+        cart.splice(b.dataset.rem,1);save();render();showToast('Producto eliminado');});
+      document.querySelectorAll('.cart-item-controls input').forEach(inp=>{
+        inp.onchange=()=>{const i=inp.dataset.idx;cart[i].qty=parseInt(inp.value)||1;save();render();};
+      });
+      document.querySelectorAll('.cart-item img').forEach(img=>img.onclick=()=>{
+        const m=document.getElementById('modal');m.querySelector('img').src=img.src;m.style.display='flex';
+      });
+      document.getElementById('modal').onclick=()=>document.getElementById('modal').style.display='none';
+    }
+    function updateSummary(){
+      const sub=cart.reduce((s,i)=>s+i.price*i.qty,0);
+      let disc=0;
+      if(coupon){disc=coupon.type=='fixed'?coupon.amount:sub*(coupon.amount/100);if(disc>sub) disc=sub;}
+      const tot=sub-disc;
+      document.getElementById('subtotal').textContent=`$${sub.toFixed(2)}`;
+      document.getElementById('discount').textContent=`-$${disc.toFixed(2)}`;
+      document.getElementById('total').textContent=`$${tot.toFixed(2)}`;
+    }
+    document.getElementById('apply-coupon').onclick=()=>{
+      const code=document.getElementById('coupon').value.trim().toUpperCase();
+      coupon=coupons[code]||null;showToast(coupon?'Cupón aplicado':'Cupón inválido');updateSummary();
+    };
+    document.getElementById('checkout').onclick=()=>{
+      if(cart.length===0){showToast('Carrito vacío');return;}
+      const method=document.getElementById('payment').value;
+      const note=encodeURIComponent(document.getElementById('note').value);
+      const items=cart.map(i=>`${i.name} x${i.qty}`).join('%0A');
+      const total=document.getElementById('total').textContent;
+      const msg=`*Pedido FitZone*%0A${items}%0A%0ATotal: ${total}%0APago: ${method}%0ANota: ${note}`;
+      window.open(`https://wa.me/1234567890?text=${msg}`,'_blank');showToast('Abriendo WhatsApp...');
+    };
+    (function(){
+      const p=new URLSearchParams(window.location.search);
+      if(p.has('producto')){
+        cart.push({name:p.get('producto'),price:parseFloat(p.get('precio'))||0,image:p.get('imagen')||'',description:p.get('descripcion')||'',qty:1});
+        save();render();showToast('Producto añadido');
+      }
+    })();
+    render();
   </script>
 </body>
 </html>
